kubernetes/app-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: phippy-deployment
  labels:
    app: phippy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phippy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: phippy
    spec:
      containers:
      - name: phippy
        image: trainersontheweb/phippy:1.0
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
