kubernetes/db-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: phippydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phippydb
  template:
    metadata:
      labels:
        app: phippydb
    spec:
      containers:
      - name: etcd
        image: trainersontheweb/etcd:3.3.4
        ports:
        - containerPort: 4001
          protocol: TCP
