kubernetes/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phippy
  labels:
    name: phippy
    app: phippy
spec:
  selector:
    app: phippy
  type: NodePort
  ports:
   - name: http
     nodePort: 31380
     port: 80
     targetPort: 80
     protocol: TCP
