kubernetes/db.yaml
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: phippydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phippydb # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: phippydb # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: etcd
        image: qedzone/etcd:3.3.4
        ports:
        - containerPort: 4001
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  selector:
    app: phippydb
  ports:
  - name: etcd
    port: 4001
    targetPort: 4001
