kubernetes/app.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phippy
spec:
  replicas: 2
#  minReadySeconds: 15
  selector:
    matchLabels:
      app: phippyapp # has to match .spec.template.metadata.labels
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: phippyapp # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: phippy
        image: qedzone/phippy:1.0
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: phippyapp
spec:
  selector:
    app: phippyapp
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: phippyapp
spec:
  rules:
  - host: phippy.local
    http:
      paths:
      - path: /
        backend:
          serviceName: phippyapp
          servicePort: 80
